--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -33,7 +33,7 @@
   <div class="span6">
     <h4>Git Bash</h4>
     <p>
-      Install Git for Windows by download and running
+      Install Git for Windows by downloading and running
       <a href="http://msysgit.github.io/">the installer</a>.
       This will provide you with both Git and Bash in the Git Bash program.
     </p>
